5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1747_1535.log
== TEST (2019-05-16 10:05:59) 
-- CODE:
n=int(input())
x=int(input())
i=1
soma=0
while(i<=n):
	calc=(((-1)**i)*((x)**(i+2))/(i+2)
	soma=soma+calc
k=soma+x
print(round(k,6))
		
-- ERROR:
File "XXXX", line 7
    soma=soma+calc
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:10:14) 
-- CODE:
n=int(input())
x=int(input())
i=1
soma=0
while(i<=n):
	calc=(((-1)**i)*(x**((2*i)+1)))/((2*i)+1)
	soma=soma+calc
k=soma+x
print(round(k,6))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '0.6'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:10:34) 
-- CODE:
n=int(input())
x=int(input())
i=1
soma=0
while(i<=n):
	calc=(((-1)**i)*(x**((2*i)+1)))/((2*i)+1)
	soma=soma+calc
k=soma+x
print(round(k,6))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '0.6'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:11:14) 
-- CODE:
x=float((input())
k=int(input())
i=1
soma=0
while(i<=n):
	calc=(((-1)**i)*(x**((2*i)+1)))/((2*i)+1)
	soma=soma+calc
k=soma+x
print(round(k,6))
		
-- ERROR:
File "XXXX", line 2
    k=int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:11:51) 
-- CODE:
x=float(input())
k=int(input())
i=1
soma=0
while(i<=n):
	calc=(((-1)**i)*(x**((2*i)+1)))/((2*i)+1)
	soma=soma+calc
k=soma+x
print(round(k,6))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(i<=n):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:12:07) 
-- CODE:
x=float(input())
n=int(input())
i=1
soma=0
while(i<=n):
	calc=(((-1)**i)*(x**((2*i)+1)))/((2*i)+1)
	soma=soma+calc
k=soma+x
print(round(k,6))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(i<=n):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:13:31) 
-- CODE:
x=float(input())
n=int(input())
i=1
soma=0
while(i<=n):
	calc=(((-1)**i)*(x**((2*i)+1)))/((2*i)+1)
	soma=soma+calc
	i=i+1
k=soma+x
print(round(k,6))
		
-- OUTPUT:
0.539553
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:13:39) 
-- CODE:
x=float(input())
n=int(input())
i=1
soma=0
while(i<=n):
	calc=(((-1)**i)*(x**((2*i)+1)))/((2*i)+1)
	soma=soma+calc
	i=i+1
k=soma+x
print(round(k,6))
		
-- OUTPUT:
0.539553
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:13:48) 
-- CODE:
x=float(input())
n=int(input())
i=1
soma=0
while(i<=n):
	calc=(((-1)**i)*(x**((2*i)+1)))/((2*i)+1)
	soma=soma+calc
	i=i+1
k=soma+x
print(round(k,6))
		
-- EXECUTION TIME:
0.13792
-- TEST CASE 1:
---- input:
0.6
3
---- correct output:
0.543552
---- user output:
0.539553
-- TEST CASE 2:
---- input:
0.25
3
---- correct output:
0.244987
---- user output:
0.244978
-- TEST CASE 3:
---- input:
0.35
4
---- correct output:
0.336667
---- user output:
0.336676
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:13:56) 
-- CODE:
x=float(input())
n=int(input())
i=1
soma=0
while(i<=n):
	calc=(((-1)**i)*(x**((2*i)+1)))/((2*i)+1)
	soma=soma+calc
	i=i+1
k=soma+x
print(round(k,6))
		
-- OUTPUT:
0.539553
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:14:10) 
-- CODE:
x=float(input())
n=int(input())
i=1
soma=0
while(i<=n):
	calc=(((-1)**i)*(x**((2*i)+1)))/((2*i)+1)
	soma=soma+calc
	i=i+1
k=soma+x
print(round(k,6))
		
-- OUTPUT:
0.539553
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:14:24) 
-- CODE:
x=float(input())
n=int(input())
i=1
soma=0
while(i<n):
	calc=(((-1)**i)*(x**((2*i)+1)))/((2*i)+1)
	soma=soma+calc
	i=i+1
k=soma+x
print(round(k,6))
		
-- OUTPUT:
0.543552
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:14:32) 
-- CODE:
x=float(input())
n=int(input())
i=1
soma=0
while(i<n):
	calc=(((-1)**i)*(x**((2*i)+1)))/((2*i)+1)
	soma=soma+calc
	i=i+1
k=soma+x
print(round(k,6))
		
-- EXECUTION TIME:
0.231189
-- TEST CASE 1:
---- input:
0.6
3
---- correct output:
0.543552
---- user output:
0.543552
-- TEST CASE 2:
---- input:
0.25
3
---- correct output:
0.244987
---- user output:
0.244987
-- TEST CASE 3:
---- input:
0.35
4
---- correct output:
0.336667
---- user output:
0.336667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
